# whitelist-api-tg-bot

./: .config.yml  Dockerfile  LICENSE  README.md  bot.py  pyproject.toml
config/: __init__.py  config.py
